--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Tour Guide Páty</string>
-    <string name="title_activity_triptarget">TriptargetActivity</string>
+    <string name="title_activity_triptarget">Tour Guide</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="eat_out">Eat out</string>
