--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,28 @@
     <string name="walk">Walk</string>
     <string name="sport">Sport</string>
     <string name="annual_events">Annual events</string>
+    <string name="christmas">Christmas</string>
+    <string name="pincenapok">Pincenapok</string>
+    <string name="kirajzas">Kirajzas</string>
+    <string name="events_christmas">With three beautiful churches, The town gives a warming welcome every Christmas.</string>
+    <string name="events_pincenapok">Celebrating the harvest of the grapes with family events and concerts.</string>
+    <string name="events_kirajzas">In every early spring, motorcycles are going out the first time of the year in roaring event celebrating the arrival of the good weather every biker dreamed of.</string>
+    <string name="bellador">Bellandor Lovasközpont</string>
+    <string name="sport_bellador">A \"BELLANDOR\" lovasközpontban, amely a Zsámbéki-medence szívében, Pátyon fekszik megtalálható az ősrégi magyar hármashangzat: ember, ló és a természet egysége. A lovasközpont teljeskörű szolgáltatást kínál azoknak, akik a lovak iránt érdeklődőnek és látványos természetes környezetben keresik a pihenést.</string>
+    <string name="sportfield">Sport field</string>
+    <string name="sport_sportfield">mainly used for footbal events</string>
+    <string name="fenyves">Fenyves</string>
+    <string name="walk_fenyves">Van itt tanösvény, parkerdő, kőbánya, minden, ami ahhoz kell, hogy egy kirándulás közben jól érezd magadat.</string>
+    <string name="pincesor">Pincesor</string>
+    <string name="walk_pincesor">Több mint száz pince rejtőzik a lombos fák árnyékában, csendes, békés környezetben. A hagyományosan is Pincehegyként nevezett területen a pincesorok egymás alatt egy-két sorban helyezkednek el.</string>
+    <string name="nagykopasz">Nagy-Kopasz</string>
+    <string name="walk_nagykopasz">A Budai-hegység legmagasabb pontja, a Nagy-Kopasz (559 m) tetején álló, óriási vitorlára emlékeztető, modern Csergezán Pál-kilátóból parádés panoráma nyílik a környező tájra. A hegy déli oldalában, a Tarnai pihenőnél pedig elragadóan szép dolomitgyepes környéken csodálhatjuk a meseszép kilátást.</string>
+    <string name="marche">Marché Bistro Páty</string>
+    <string name="eat_out_marche">"A healty, fresh welcome to you from Marché Bistro Páty, your fresh food stop on the M1 from Budapest to Vienna. Come and discover the diverse, regional and seasonal products and the fresh ingredients at the Marché Natural-Bakery for yourself. Enjoy the stop on your journey in our modern indoor area or the sunny outdoor terrace. "</string>
+    <string name="cest">C\'est La Vie Café</string>
+    <string name="eat_out_cest">Prémium kávé, ropogós croissant, francia gourmet sütemények, csapolt prosecco, házi szörpök, ínyenc lekvárok és csokoládék, ajándéktárgyak, lakásdekor.</string>
+    <string name="gastland">Gastland M1 Hotel</string>
+    <string name="eat_out_gastland"><![CDATA[Informal lodging offering an informal restaurant, a wine cellar & free breakfast, plus a sauna.]]></string>
+    <string name="paagh">Paagh étterem</string>
+    <string name="eat_out_paagh">Szeretettel várjuk vendégeinket éttermünkben és bowling pályánkon. Vállalunk esküvőket, céges és családi rendezvényeket. \n Asztalfoglalás: Tel.06-30-948-3102\n 06-30-223-2006\n Nyitva tartás a hét minden napján 10-22 óráig</string>
 </resources>
